CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(AsioMpich2)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -O3")

FIND_PACKAGE(Boost REQUIRED COMPONENTS system)

#INCLUDE_DIRECTORIES(  ${ASIO_INCLUDE_DIR}  .  )

#LINK_DIRECTORIES(  ${ASIO_LIBRARY_DIR}  )

SET(LIBS boost_system pthread)

ADD_EXECUTABLE(${PROJECT_NAME}_client
  client.cpp
        )

TARGET_LINK_LIBRARIES(${PROJECT_NAME}_client ${LIBS})

ADD_EXECUTABLE(${PROJECT_NAME}_send
  send.cpp
        )

TARGET_LINK_LIBRARIES(${PROJECT_NAME}_send ${LIBS})